Trying to fix problem with section media screen about page on iphone

--- a/Assets/Stylesheets/operationopportunity.audiot.info/footer.css
+++ b/Assets/Stylesheets/operationopportunity.audiot.info/footer.css
@@ -36,7 +36,8 @@ footer li{
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
   	section {
-  		overflow-y: auto;
+  		position: absolute;
+  		min-height: 625px;
   	}
 
   	section p {
